# colorful-conway

./: .gitignore  CMakeLists.txt  Conway.kdev4  README.md  cell.h  main.cpp  screen.h
